--- a/.github/workflows/my-starter-workflow.yml
+++ b/.github/workflows/my-starter-workflow.yml
@@ -1,11 +1,8 @@
-name: Reusable Workflow
+name: My Starter Workflow
 
 on:
-  workflow_call:
-    inputs:
-      node:
-        required: true
-        type: string
+  push:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,11 +11,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Output the input value
+      - name: Run a multi-line script
         run: |
-          echo "The node version to use is: ${{ inputs.node }}"
+          echo Add other actions to build,
+          echo test, and deploy to your project.
 
-call-reusable-workflow:
-  uses: ./.github/workflows/reusable-workflow.yml
-  with:
-    node: 14          
+  call-reusable-workflow:
+    uses: ./.github/workflows/reusable-workflow.yml
+    with:
+      node: 14
