--- a/.github/workflows/my-starter-workflow.yml
+++ b/.github/workflows/my-starter-workflow.yml
@@ -1,8 +1,11 @@
-name: My Starter Workflow
+name: Reusable Workflow
 
 on:
-  push:
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      node:
+        required: true
+        type: string
 
 jobs:
   build:
@@ -11,12 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run a multi-line script
+      - name: Output the input value
         run: |
-          echo Add other actions to build,
-          echo test, and deploy to your project.
+          echo "The node version to use is: ${{ inputs.node }}"
 
-  call-reusable-workflow:
-    uses: ./.github/workflows/reusable-workflow.yml
-    with:
-      node: 14
+call-reusable-workflow:
+  uses: ./.github/workflows/reusable-workflow.yml
+  with:
+    node: 14
